# Co-curricular

./: .gitignore  README.md
.github/workflows/: lenet_train.yml
AI mini projects/: README.md
AI mini projects/Digit-recognizer/: Dockerfile  README.md  azure-pipelines.yml  conda.yml  config.py  requirements.txt  run.ipynb  run_config.json  run_mlflow.ipynb  temp.txt  train.py
AI mini projects/Fashion-MNIST-recognizer/: README.md  conda.yaml  requirements.txt  run.py
AI mini projects/Flower-cifar100-recognizer/: MANIFEST  README.md  requirements.txt  run_wandb.ipynb  setup.py
AI mini projects/Flower-recognizer/: README.md  requirements.txt  run.ipynb  setup_1.py
AI mini projects/Lenet/: MLproject  README.md  backend_config.json  conda.yaml  conda.yml  config.py  data.py  net.py  requirements.txt  run.ipynb  run.py  run_mlflow.ipynb  test.py  train.py  train_cloud.py  utils.py
AI mini projects/Vehicle-model-classification/: utils.py  (+2 more)
Airflow/: README.md
Compiler Design/: Compiler Design.ipynb
Cryptography/: CRYPTOGRAPHY.ipynb
Django mini projects/: README.md
OA/EyePopAI/: .gitignore  README.md  environment.yml  main.py  pyproject.toml  test.py
OA/EyePopAI/eyepopai/: __init__.py  main.py
OA/EyePopAI/eyepopai/components/: query.py  table.py  workspace.py
OA/EyePopAI/eyepopai/core/: constants.py  decorators.py  logger.py  pop.py  utils.py  validators.py
OA/EyePopAI/eyepopai/tcss/: eyepopai.tcss
OA/EyePopAI/src/components/: query.py  workspace.py
OA/EyePopAI/tcss/: eyepopai.tcss
OA/Kaedim/: annotate.py  backup_blender.py  blender.py  pyproject.toml
RESL/: ego.py  simulate.py  task_1.py  utils.py  wrathog.py
(+191 files in other folders)
